--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
     meterian_scan:
         name: Meterian client scan
         runs-on: ubuntu-latest
-        steps:
+        steps: 
           - name: Checkout
             uses: actions/checkout@v2
           - name: Meterian Scanner
             uses: MeterianHQ/meterian-github-action@v1.0.9
-            with:
-              oss: true
+            env:
+              METERIAN_API_TOKEN: ${{ secrets.METERIAN_API_TOKEN }}
