--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"packageManager": "pnpm@6.32.24",
 	"engines": {
